# code

./: README.md
android/AIDL_Server/: settings.gradle
android/AIDL_Server/app/: build.gradle
android/AIDL_Server/app/src/main/: AndroidManifest.xml
android/AIDL_Server/gradle/wrapper/: gradle-wrapper.properties
android/StateMachine_Study/: settings.gradle
android/StateMachine_Study/app/: build.gradle
android/StateMachine_Study/app/libs/: clientsdk_3.0.0.1396932.aar
android/StateMachine_Study/app/src/main/: AndroidManifest.xml
android/StateMachine_Study/app/src/main/res/layout/: activity_main.xml
android/StateMachine_Study/app/src/main/res/values/: strings.xml
android/StateMachine_Study/gradle/wrapper/: gradle-wrapper.properties
android/connectAIDL/: settings.gradle
android/connectAIDL/app/: build.gradle
android/connectAIDL/app/src/main/: AndroidManifest.xml
android/connectAIDL/app/src/main/res/layout/: activity_main.xml
android/connectAIDL/app/src/main/res/values/: strings.xml
android/connectAIDL/gradle/wrapper/: gradle-wrapper.properties
android/note/: Activity.md
cpp/eclipse_cpp/cmake_learn/: .cproject  .project  CMakeLists.txt
cpp/eclipse_cpp/cmake_learn/src/: CMakeLists.txt  cmake_learn.cpp
cpp/eclipse_cpp/fltk_learn/: .cproject  .project  CMakeLists.txt  fltk_learn.cpp
java/eclipse/: .project
java/eclipse/src/java_type/: MainApp.java
java/idea/xmllearn/: pom.xml
java/note/: Java变量.md
linux/: Happy_linux_cmd.md
pure_c/: README.txt
python/spyder3_code/testMain/: main.py  testcode.py  turtle_test.py
(+41 files in other folders)
